package dh.backend.service;

import dh.backend.model.Persona;

public interface ServiceVacunacion {
    String vacunar(Persona persona);
}
